<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GuideAntiTheftOneFragment">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:padding="14dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/tv_guide_anti_theft_1_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_guide_anti_theft_1_theme" />
        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"/>
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_guide_anti_theft_1_present"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/btn_star_big_on" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_guide_anti_theft_1_present_1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/btn_star_big_on" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_guide_anti_theft_1_present_2" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/btn_star_big_on" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_guide_anti_theft_1_present_3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/btn_star_big_on" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_guide_anti_theft_1_present_4" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>